tests/valid/structs/single_field.nyx
// Struct with a single field
struct Wrapper
    value: i32
