tests/invalid/syntax/struct_duplicate_fields.nyx
// Invalid: Struct with duplicate field names
struct DuplicateFields
    x: i32
    y: i32
    x: f64
